moved doc to controller
